--- a/styles/style.css
+++ b/styles/style.css
@@ -5,23 +5,6 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.flex-row {
-  display: flex;
-}
-
-.page-link {
-  color: #2f80ed;
-  text-decoration: none;
-}
-
-.indent-reset {
-  margin: 0;
-}
-
-.text-theme_dark {
-  color: white;
-}
-
 .header {
   height: 100vh;
   min-height: 600px;
@@ -34,31 +17,37 @@
 .logo {
   width: 228px;
   height: 32px;
-  background-image: url(../images/logo_place_header.svg);
+  background-image: url("../images/logo_place_header.svg");
   background-size: contain;
   background-repeat: no-repeat;
-/*  background-position: center;*/
 }
 
-.logo__lace_header {
+.logo_lace_header {
   position: absolute;
   top: 30px;
   left: 64px;
   z-index: 2;
 }
 
+.logo_place_footer {
+  background-image: url("../images/logo_place_footer.svg"); 
+}
+
 .header__title {
-  width: 730px;
+  max-width: 730px;
+  width: 100%;
   font-size: 102px;
   font-weight: 600;
   line-height: 96px;
   align-self: center;
-  margin-left: 64px;
+  margin: 0 64px;
   z-index: 3;
 }
 
 .header__subtitle {
-  width: 388px;
+  margin: 0;
+  max-width: 388px;
+  width: 100%;
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
@@ -66,6 +55,11 @@
   bottom: 30px;
   left: 64px;
   z-index: 2;
+}
+
+.header-link {
+  color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__main-illustration {
@@ -86,6 +80,7 @@
 }
 
 .description {
+  display: flex;
   padding-top: 100px;
   justify-content: center;
   align-content: center;
@@ -93,15 +88,19 @@
 
 .two-columns {
   width: 80%;
+  display: flex;
   justify-content: space-between;
+  margin: 0;
 }
 
 .two-columns__brief {
-  width: 175px;
+  max-width: 175px;
+  width: 100%;
   font-size: 18px;
   font-weight: normal;
   line-height: 1.2;
   color: #2f80ed;
+  margin: 0;
 }
 
 .main-text {
@@ -109,16 +108,18 @@
   min-width: 784px;
   list-style-type: none;
   text-align: left;
+  margin: 0;
 }
 
-.main-text__paragraph {
+.main-text :first-of-type {
+  margin-top: 0;
+}
+
+.two-columns__paragraph {
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
-  margin: auto;
-}
-
-.main-text__paragraph_indent {
+  margin: 0 auto;
   margin-top: 30px;
 }
 
@@ -133,22 +134,32 @@
 }
 
 .section-title {
-  width: 60%;
+  min-width: 60%;
+  width: 100%;
   font-size: 60px;
   font-weight: 600;
   line-height: 1.15;
   text-align: center;
-  margin: auto;
+  margin: 0 auto;
+}
+
+.section-title_theme_dark {
+  color: white;
 }
 
 .section-subtitle {
-  width: 60%;
+  min-width: 60%;
+  width: 100%;
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
   text-align: center;
   padding-top: 20px;
-  margin: auto;
+  margin: 0 auto;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
 }
 
 .table {
@@ -168,6 +179,11 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 1.15;
+  margin: 0;
+}
+
+.table__heading_theme_dark {
+  color: white;
 }
 
 .table__text {
@@ -175,23 +191,30 @@
   font-weight: normal;
   line-height: 1.2;
   padding-top: 20px;
+  margin: 0;
+}
+
+.table__text_theme_dark {
+  color: white;
 }
 
 .feynman {
   display: flex;
+  flex-direction: column;
   min-height: 890px;
   background: #f2f2f2 url("../images/feynman.png") no-repeat left bottom;
   position: relative;
-  justify-content: center;
 }
 
 .feynman__title {
-  width: 648px;
+  min-width: 648px;
+  width: 100%;
   font-size: 120px;
   font-weight: 600;
   line-height: 1.15;
+  align-self: center;
   text-align: center;
-  margin-top: 100px;
+  margin: 100px auto 0;
   }
 
 .feynman__subtitle {
@@ -199,13 +222,15 @@
   font-weight: normal;
   line-height: 51px;
   text-align: center;
-  margin-top: 70px;
+  margin: 70px auto 0;
 }
 
 .feynman__link {
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
+  color: #2f80ed;
+  text-decoration: none;
   position: absolute;
   right: 48px;
   top: 50%;
@@ -221,7 +246,7 @@
 
 .table_theme_dark {
   position: relative;
-  z-index: 2;
+  z-index: 1;
 }
 
 .table__cell_theme_dark {
@@ -230,12 +255,13 @@
 }
 
 .kaufman__triangle {
-  height: 877px;
   width: 877px;
+  height: 877px;
+  background: url("../images/kaufman-triangle.svg") no-repeat;
+  background-size: contain;
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 1;
 }
 
 .footer {
@@ -247,12 +273,15 @@
   box-sizing: border-box; 
 }
 
-.footer__column {
+.footer__columns {
   width: 90%;
-  min-height: 210px;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+}
+
+.footer__column {
+
 }
 
 .footer__column_content_copyright {
@@ -262,14 +291,19 @@
   justify-content: space-between;
 }
 
-.logo__place_footer {
-  background-image: url("../images/logo_place_footer.svg"); 
+.footer__column_content_info {
+  
+}
+
+.footer__column_content_social {
+
 }
 
 .footer__author {
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
+  color: white;
   margin: 18px 0;
 }
 
@@ -277,6 +311,8 @@
   font-size: 18px;
   font-weight: 600;
   line-height: 30px;
+  color: white;
+  margin: 0;
 }
 
 .footer__column-links {
@@ -286,10 +322,12 @@
 }
 
 .footer__column-link {
+  display: block;
   font-size: 18px;
   font-weight: normal;
   line-height: 30px;
   text-decoration: none;
+  color: white;
 }
 
 .footer__social-icon {
