--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+} 
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -12,6 +21,7 @@
   background-color: #f2f2f2;
   display: flex;
   position: relative;
+  overflow: hidden
 }
 
 .logo {
@@ -77,6 +87,7 @@
   position: absolute;
   top: 64px;
   right: 0;
+  animation: rotation 20s linear infinite;
 }
 
 .description {
