--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,11 @@
     to {
         transform: rotate(360deg);
     }
-} 
+}
+
+.rotation {
+  animation: rotation 20s linear infinite;
+}
 
 .page {
   min-width: 1100px;
@@ -87,7 +91,6 @@
   position: absolute;
   top: 64px;
   right: 0;
-  animation: rotation 20s linear infinite;
 }
 
 .description {
@@ -138,6 +141,120 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 34px;
+}
+
+.techniques {
+  width: 80%;
+  padding: 100px 0 0;
+  margin: 0 auto;
+}
+
+.cards {
+  margin: 0 auto;
+  width: 920px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cards__item {
+  width: 240px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 100px;
+  text-align: center;
+}
+
+.cards__item:nth-child(3) {
+  margin-right: 0;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  margin: 60px auto 43px;
+}
+
+.cards__title {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.15;
+  margin: 0;
+}
+
+.cards__description {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 23px;
+  padding-top: 16px;
+  margin: 0;
+}
+
+.video {
+  padding-top: 100px;
+  position: relative;
+}
+
+.video__iframes {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  position: relative;
+  top: 50px;
+}
+
+.video__iframe {
+  margin-right: 20px;
+}
+
+.video__iframe:last-child {
+  margin-right: 0;
+}
+
+.oakley {
+  display: flex;
+  padding-top: 160px;
+  justify-content: center;
+  align-content: center;
+  background-color: #f2f2f2;
+}
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  min-height: 890px;
+  background: #f2f2f2 url("../images/feynman.png") no-repeat left bottom;
+  position: relative;
+}
+
+.feynman__title {
+  width: 100%;
+  max-width: 648px;
+  font-size: 120px;
+  font-weight: 600;
+  line-height: 1.15;
+  align-self: center;
+  text-align: center;
+  margin: 100px auto 0;
+  }
+
+.feynman__subtitle {
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  text-align: center;
+  margin: 70px auto 0;
+}
+
+.feynman__link {
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  color: #2f80ed;
+  text-decoration: none;
+  position: absolute;
+  right: 48px;
+  top: 50%;
 }
 
 .digits {
@@ -209,42 +326,70 @@
   color: white;
 }
 
-.feynman {
-  display: flex;
-  flex-direction: column;
-  min-height: 890px;
-  background: #f2f2f2 url("../images/feynman.png") no-repeat left bottom;
-  position: relative;
+.khan {
+  padding-top: 105px;
+  background-color: #f2f2f2;
 }
 
-.feynman__title {
-  width: 100%;
-  max-width: 648px;
-  font-size: 120px;
+.khan__container {
+ width: 80%;
+ margin: 0 auto;
+}
+
+.khan__author {
+  margin: 0;
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 42px;
+}
+
+.khan__title {
+  margin: 0;
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 1.15; 
+}
+
+.khan__quote {
+  width: 790px;
+  margin: 50px 0 35px;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
+
+.khan__quote-author {
+  margin: 0;
+  font-size: 24px;
   font-weight: 600;
   line-height: 1.15;
-  align-self: center;
-  text-align: center;
-  margin: 100px auto 0;
-  }
-
-.feynman__subtitle {
-  font-size: 36px;
-  font-weight: normal;
-  line-height: 51px;
-  text-align: center;
-  margin: 70px auto 0;
 }
 
-.feynman__link {
-  font-size: 36px;
+.khan__quote-author-subline {
+  margin: 10px 0 68px;
+  font-size: 24px;
   font-weight: normal;
-  line-height: 51px;
-  color: #2f80ed;
+  line-height: 1.15;
+}
+
+.khan__book-container {
+  display: flex;
+}
+
+.khan__book-pic {
+  width: 620px;
+  height: 608px;
+  margin-right: 48px;
+  object-fit: cover;
+  object-position: top left;
+}
+
+.khan__buy-link {
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 42px;
   text-decoration: none;
-  position: absolute;
-  right: 48px;
-  top: 50%;
+  color: #2f80ed;
 }
 
 .kaufman {
@@ -273,6 +418,27 @@
   position: absolute;
   top: 0;
   right: -210px;
+}
+
+.resources{
+  padding-top: 100px;
+  padding-bottom: 270px;
+}
+
+.resources__logo-zone {
+  width: 1100px;
+  margin: 80px auto 0;
+  display: flex;
+  justify-content: center;
+}
+
+.resources__link {
+  flex-grow: 1;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
 }
 
 .footer {
