--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -4,7 +4,9 @@
   font-size: 120px;
   font-weight: 600;
   line-height: 1.15;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   text-align: center;
   margin: 100px auto 0;
   }
