--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -4,7 +4,9 @@
   font-size: 102px;
   font-weight: 600;
   line-height: 96px;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   margin: 0 64px;
   z-index: 3;
 }
