--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,7 +1,12 @@
 .oakley {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-top: 160px;
-  justify-content: center;
-  align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
   background-color: #f2f2f2;
 }
