--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,6 +1,10 @@
 .resources__logo-zone {
   width: 1100px;
   margin: 80px auto 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
