--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -9,4 +9,6 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 1100px;
+  padding: 0;
+  list-style-type: none;
 }
