--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url('../blocks/header/__title/header__title.css');
 @import url('../blocks/header/__subtitle/header__subtitle.css');
 @import url('../blocks/header/__link/header__link.css');
+@import url('../blocks/link-animation/link-animation.css');
 @import url('../blocks/header/__main-illustration/header__main-illustration.css');
 @import url('../blocks/header/__square-pic/header__square-pic.css');
 @import url('../blocks/rotation/rotation.css');
@@ -50,6 +51,7 @@
 @import url('../blocks/khan/__author/khan__author.css');
 @import url('../blocks/khan/__title/khan__title.css');
 @import url('../blocks/khan/__quote/khan__quote.css');
+@import url('../blocks/khan/__paragraph/khan__paragraph.css');
 @import url('../blocks/khan/__quote-author/khan__quote-author.css');
 @import url('../blocks/khan/__quote-author-subline/khan__quote-author-subline.css');
 @import url('../blocks/khan/__book-container/khan__book-container.css');
